fixed one of the admin layout issues
added margin top to admin body

--- a/css/sass/base/_base.scss
+++ b/css/sass/base/_base.scss
@@ -25,6 +25,7 @@ body {
 	// font-size: var(--font-size-fluid-1);
 	line-height: 1.3;
 	background-color: var(--clr-body-bg);
+	background-color: rgb(225, 225, 225);
 }
 
 ul {
